minor changes on requests for sections and notes